:bug: [Pledge] Pledge now button gets overlap by UI arrow #81

--- a/src/style/bootstrap.css
+++ b/src/style/bootstrap.css
@@ -7371,7 +7371,7 @@ button.close {
 .fundraisecolorbox img{max-width:100%;}
 
 
-.birthdaybox{width:100%; float:left; background:url(../images/img21.jpg) no-repeat center top; background-size:100%; height:772px; margin-top:87px;}
+.birthdaybox{width:100%; float:left; background:url(../images/img21.jpg) no-repeat center top; background-size:cover; height:800px; margin-top:87px;}
 .birthdaybox h1{text-align:center;  font-family: 'AvenirNextLTPro-Demi'; font-size:48px; font-weight:normal; padding:25px 0 25px 0; color:#fff;}
 .birthdayboximg{width:100%; text-align:center; padding:0 0 15px 0;}
 .birthdayboximg img{max-width:100%;}
@@ -7848,7 +7848,6 @@ button.close {
 .dontebox{left:5%; width:90%; top:5%; padding:25px; height:91%;}
 .dontebox h2{font-size:40px;}
 .dontelinkbox .btn-primary{width: 48%;}
-.birthdaybox{background-size:auto;}
 .sign-up{background-size:auto;}
 .whyboxbg{background-size:auto;}
 .whyboxbg2{background-size:auto;}
@@ -8435,5 +8434,29 @@ footer{padding:20px 0;}
 input::-ms-clear,
 input::-ms-reveal {
   display: none;
+}
+
+/*custom css for [FAQ] Improper layout by expanding some description #64*/
+
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-row [class^="col-"],
+.flex-row [class*=" col-"] {
+  float: none;
+}
+
+/*custom css for [Pledge] Pledge now button gets overlap by UI arrow #81*/
+
+.birthdayinputbox form:after {
+  clear: both;
+  display: block;
+  content: '';
+}
+
+.birthdayinputbox form {
+  padding-bottom: 20px;
 }
 
